Fix button alignment

--- a/assets/style.sass
+++ b/assets/style.sass
@@ -361,7 +361,7 @@ button:focus
     color: lighten($bg, 50%)
     border-radius: 4px
     height: 26px
-    line-height: 26px
+    line-height: 24px
     font-size: 0.9em
     transition: all 100ms linear
 
@@ -380,6 +380,8 @@ button:focus
     margin-right: 8px
     color: $green
     font-size: 14px
+    position: relative
+    top: -1px
 
   .button.run:before
     +ion-icon('play')
